--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,3 @@
 {
-    "presets": [
-        "@babel/preset-react"
-    ],
-    "plugins": [
-        "@babel/plugin-syntax-jsx",
-        "macros"
-    ]
-}
+    "presets": ["@babel/preset-env", "@babel/preset-react"]
+  }
